About page is done

--- a/app/views/content/about.html.erb
+++ b/app/views/content/about.html.erb
@@ -1,111 +1,118 @@
-<div class="about">
-	<h1>About</h1>
+<div id='page-title'>
+  <h2>About</h2>
+</div>
 
-	<ul>
-	<li>Over 6 years building websites from start to end.  Taking numerous websites from spec to deployment. Using technologies like Drupal, PHP, Rails, Angular.js, JavaScript, jQuery, Apache, etc.</li>
-	<li>Over 7 years managing projects, clients and staff. Working alone or with a team to make sure the projects get done.  As well as communicating with the client to make sure the delivered items are meeting their goals.</li>
-	<li>Over 15 years working on Linux systems and managing LAMP setups for Drupal websites, email etc.</li>
-	<li>Over 3 years experience as a presenter at numerous Drupal and other Web related events. Yale, MIT, Smith College and UMASS Amherst.</li>
-	<li>Over 5 years experience as a network and desktop systems admin both Windows and Linux. </li>
-	<li>Recent work on Ruby on Rails.</li>
-	<li>3 Months experience using Angular.js</li>
-	</ul>
-	<h2>Sites</h2>
-
-	<p>
-		You can see a long list of sites below that I have built alone or with a team, some of which I also managed.
-	</p>
+<div id="wrapper" class="full">
 	<div class="row-fluid">
-	<div class="sites span7">
-		<div class="site">http://www.campusservices.harvard.edu<span class="some"></span><span class="php"></span><span class="drupal"></span></div>
+		<div class="span12">
 
-		<div class="site">http://fibermark.com<span class="full"></span><span class="js"></span><span class="php"></span><span class="drupal"></span><span class="css"></span></div>
+			<h3>Me?</h3>
 
-		<div class="site">http://activelivingresearch.org<span class="full"></span><span class="php"></span><span class="drupal"></span><span class="pm"></span></div>
-
-		<div class="site">http://digitalshingle.mit.edu<span class="some"></span><span class="php"></span><span class="drupal"></span></div>
-
-		<div class="site">http://www.law.uconn.edu<span class="full"></span><span class="php"></span><span class="drupal"></span><span class="pm"></span></div>
-
-		<div class="site">http://www.fullercenter.org<span class="some"></span><span class="php"></span><span class="drupal"></span><span class="pm"></span></div>
-
-		<div class="site">http://science.mit.edu<span class="full"></span><span class="php"></span><span class="drupal"></span><span class="pm"></span></div>
-
-		<div class="site">http://americanrepertorytheater.org<span class="some"></span><span class="php"></span><span class="drupal"></span></div>
-
-		<div class="site">http://alfrednutile.info<span class="full"></span><span class="js"></span><span class="rails"></span><span class="drupal"></span></div>
-
-		<div class="site">http://burnesscommunications.com<span class="some"></span><span class="js"></span><span class="php"></span><span class="drupal"></span></div>
-
-		<div class="site">http://www.vtinvasives.org<span class="full"></span><span class="js"></span><span class="php"></span><span class="drupal"></span></div>
-
-		<div class="site">http://alumni.williams.edu<span class="full"></span><span class="php"></span><span class="drupal"></span><span class="pm"></span></div>
-
-		<div class="site">http://ohionet.org<span class="full"></span></span><span class="php"></span><span class="drupal"></span><span class="pm"></span></div>
-
-		<div class="site">http://www.acm-ne.org<span class="full"></span><span class="js"></span><span class="php"></span><span class="drupal"></span><span class="pm"></span></div>
-
-		<div class="site">http://www.ophthalmicedge.org<span class="full"></span><span class="php"></span><span class="drupal"></span></div>
-
-		<div class="site">http://fieldeddy.com<span class="full"></span><span class="php"></span><span class="drupal"></span></div>
-
-		<div class="site">http://www.myersinfosys.com<span class="full"></span><span class="php"></span><span class="drupal"></span></div>
-
-		<div class="site">http://www.chroma.com<span class="some"></span><span class="js"></span><span class="php"></span><span class="drupal"></span></div>
-
-		<div class="site">http://clpp.hampshire.edu/<span class="full"></span><span class="php"></span><span class="drupal"></span><span class=notactive></span></div>
-
-		<div class="site">http://drupalcampma.com<span class="full"></span><span class="php"></span><span class="drupal"></span></div>
-
-		<div class="site">http://www.gaiauniversity.org<span class="full"></span><span class="php"></span><span class="js"></span><span class="drupal"></span><span class=notactive></span></div>
-
-		<div class="site">http://www.rfc.org <span class="full"></span><span class="php"></span><span class="drupal"></span></div>
-
-		<div class="site">http://leaderresource.org<span class="full"></span><span class="php"></span><span class="js"></span><span class="drupal"></span><span class=notactive></span></div>
-
-		<div class="site">http://nationalpriorities.org<span class="full"></span><span class="php"></span><span class="js"></span><span class="drupal"></span><span class=notactive></span><span class=notactive></span></div>
-
-		<div class="site">http://www.real-user-monitoring.com<span class="some"></span><span class="php"></span><span class="drupal"></span></div>
-
-		<div class="site">http://www.ctconservation.org<span class="full"></span><span class="php"></span><span class="js"></span><span class="drupal"></span><span class="pm"></span></div>
-
-		<div class="site">http://www.cradlefamily.com<span class="full"></span><span class="php"></span><span class="js"></span><span class="drupal"></span><span class=notactive></span><span class=notactive></span></div>
-		<div class="site">http://www.stopitnow.org<span class="full"></span><span class="php"></span><span class="js"></span><span class="drupal"></span><span class=notactive></span></div>
-
-		<div class="site">http://3blmedia.com<span class="some"></span><span class="php"></span><span class="js"></span><span class="drupal"></span><span class=notactive></span></div>
-
-		<h2>Soon to be released</h2>
-
-		<div class="site">http://drfa.alfrednutile.info<span class="full"></span><span class="rails"></span><span class="css"></span><span class="pm"></span>
-		</div>
-		<div class="site">http://uppd.alfrednutile.info<span class="full"></span><span class="rails"></span><span class="css"></span>
+			<p>
+				<ul class="check_list">
+				<li>Over 6 years building websites from start to end.  Taking numerous websites from spec to deployment. Using technologies like Drupal, PHP, Rails, Angular.js, JavaScript, jQuery, Apache, etc.</li>
+				<li>Over 7 years managing projects, clients and staff. Working alone or with a team to make sure the projects get done.  As well as communicating with the client to make sure the delivered items are meeting their goals.</li>
+				<li>Over 15 years working on Linux systems and managing LAMP setups for Drupal websites, email etc.</li>
+				<li>Over 3 years experience as a presenter at numerous Drupal and other Web related events. Yale, MIT, Smith College and UMASS Amherst.</li>
+				<li>Over 5 years experience as a network and desktop systems admin both Windows and Linux. </li>
+				<li>Recent work on Ruby on Rails.</li>
+				<li>3 Months experience using Angular.js</li>
+				</ul>
+			</p>
 		</div>
 	</div>
-		<div class="keys well span3">
-			<h4>Keys</h4> 
-			<div><span class="full"></span>In on Full Build</div> 
-			<div><span class="some"></span>Some Work</div>
-			<div><span class="php"></span>PHP</div> 
-			<div><span class="rails"></span>Rails</div> 
-			<div><span class="drupal"></span>Drupal</div>  
-			<div><span class="css"></span>Front End</div> 
-			<div><span class="pm"></span>Project Manager</div> 
-			<div><span class="notactive"></span>Version Longer Active</div>
+	<div class="row-fluid">
+	 	<div class="span8 separate">
+
+			<h2>Sites</h2>
+
+			<p>
+				<span class="dropcap">Y</span>ou can see a long list of sites below that I have built alone or with a team, some of which I also managed.
+			</p>
+			<div class="sites">
+				<div class="site">http://www.campusservices.harvard.edu<i class="halflings-icon cog"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
+
+				<div class="site">http://fibermark.com<i class="halflings-icon star"></i><span class="js"></span><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon user"></i></div>
+
+				<div class="site">http://activelivingresearch.org<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div>
+
+				<div class="site">http://digitalshingle.mit.edu<i class="halflings-icon cog"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
+
+				<div class="site">http://speakers.drsforamerica.org<i class="halflings-icon star"></i><i class="halflings-icon eye-open"></i><i class="halflings-icon user"></i><i class="halflings-icon tag"></i>
+				</div>
+
+				<div class="site">http://www.law.uconn.edu<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div>
+
+				<div class="site">http://www.fullercenter.org<i class="halflings-icon cog"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div>
+
+				<div class="site">http://science.mit.edu<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div>
+
+				<div class="site">http://americanrepertorytheater.org<i class="halflings-icon cog"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
+
+				<div class="site">http://alfrednutile.info<i class="halflings-icon star"></i><span class="js"></span><i class="halflings-icon eye-open"></i><i class="halflings-icon certificate"></i></div>
+
+				<div class="site">http://burnesscommunications.com<i class="halflings-icon cog"></i><span class="js"></span><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
+
+				<div class="site">http://www.vtinvasives.org<i class="halflings-icon star"></i><span class="js"></span><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
+
+				<div class="site">http://alumni.williams.edu<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div>
+
+				<div class="site">http://ohionet.org<i class="halflings-icon star"></i></span><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div>
+
+				<div class="site">http://www.acm-ne.org<i class="halflings-icon star"></i><span class="js"></span><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div>
+
+				<div class="site">http://www.ophthalmicedge.org<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
+
+				<div class="site">http://fieldeddy.com<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
+
+				<div class="site">http://www.myersinfosys.com<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
+
+				<div class="site">http://www.chroma.com<i class="halflings-icon cog"></i><span class="js"></span><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
+
+				<div class="site">http://clpp.hampshire.edu/<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i><span class=notactive></span></div>
+
+				<div class="site">http://drupalcampma.com<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
+
+				<div class="site">http://www.gaiauniversity.org<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><span class="js"></span><i class="halflings-icon certificate"></i><span class=notactive></span></div>
+
+				<div class="site">http://www.rfc.org <i class="halflings-icon star"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
+
+				<div class="site">http://leaderresource.org<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><span class="js"></span><i class="halflings-icon certificate"></i><span class=notactive></span></div>
+
+				<div class="site">http://nationalpriorities.org<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><span class="js"></span><i class="halflings-icon certificate"></i><span class=notactive></span><span class=notactive></span></div>
+
+				<div class="site">http://www.real-user-monitoring.com<i class="halflings-icon cog"></i><i class="halflings-icon stop"></i><i class="halflings-icon certificate"></i></div>
+
+				<div class="site">http://www.ctconservation.org<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><span class="js"></span><i class="halflings-icon certificate"></i><i class="halflings-icon tag"></i></div>
+
+				<div class="site">http://www.cradlefamily.com<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><span class="js"></span><i class="halflings-icon certificate"></i><span class=notactive></span><span class=notactive></span></div>
+				<div class="site">http://www.stopitnow.org<i class="halflings-icon star"></i><i class="halflings-icon stop"></i><span class="js"></span><i class="halflings-icon certificate"></i><span class=notactive></span></div>
+
+				<div class="site">http://3blmedia.com<i class="halflings-icon cog"></i><i class="halflings-icon stop"></i><span class="js"></span><i class="halflings-icon certificate"></i><span class=notactive></span></div>
+
+				<h2>Soon to be released</h2>
+				<div class="site">http://uppd.alfrednutile.info<i class="halflings-icon star"></i><i class="halflings-icon eye-open"></i><i class="halflings-icon user"></i>
+				</div>
+			</div>
 		</div>
-	</div>
+		<div class="span4 sidebar">
+				<div class="keys well">
+					<h4>Keys</h4> 
+					<div><i class="halflings-icon star"></i>In on Full Build</div> 
+					<div><i class="halflings-icon cog"></i>Some Work</div>
+					<div><i class="halflings-icon stop"></i>PHP</div> 
+					<div><i class="halflings-icon eye-open"></i>Rails</div> 
+					<div><i class="halflings-icon certificate"></i>Drupal</div>  
+					<div><i class="halflings-icon user"></i>Front End</div> 
+					<div><i class="halflings-icon tag"></i>Project Manager</div> 
+					<div><i class="halflings-icon refresh"></i>No Longer Active</div>
+				</div>
 
-
-	<div class="row">
-		<span class="span12">
-		<h2>More info</h2>
-
-		<p><a href="http://www.linkedin.comin/alfrednutile/">http://www.linkedin.comin/alfrednutile/</a> 
-		or<br />
-		<a href="http://twitter.com/alnutile">http://twitter.comalnutile</a>
-		<p>Or the infamous resume 
-		  <a href="https://dl.dropboxusercontent.comu/54803135/Resume.pdf" target="_blank">PDF Here</a>
-		  <a href="https://dl.dropboxusercontent.com/u/54803135/Resume.doc" target="_blank">DOC Here</a>
-		</p>
-		</span>
+			<h2>More info</h2>
+			<p>Or the infamous resume 
+			  <a href="https://dl.dropboxusercontent.comu/54803135/Resume.pdf" target="_blank">PDF Here</a>
+			  <a href="https://dl.dropboxusercontent.com/u/54803135/Resume.doc" target="_blank">DOC Here</a>
+			</p>
+		</div>
 	</div>
 </div>
