--- a/app/views/content/home.html.erb
+++ b/app/views/content/home.html.erb
@@ -1,19 +1,29 @@
-<h1 class="title">Alfred Nutile</h1>
-<div>Who?
-Alfred Nutile, 15+ years of experience in different technologies. Linux, PHP, MySQL, Drupal, SysAdmin, LAMP, JS, jQuery, CSS, Consulting, Rails, Angular.js, JS, etc..
-  <div id="home-circles" class="container-fluid span11">
-    <div class="row-fluid">
-      <a href="/about"><span id="about-me-circle" class="span3"></span></a>
-      <a href="/portfolio"><span id="projects-circle" class="span3"><p>Portfolio</p></span></a>
-      <a href="http://hackforwesternmass.org/"><span id="hfc-circle" class="span3"></span></a>
-      <a href="http://alfrednutile.info/tags/rails"><span id="rails-circle" class="span3"></span></a>
-      <a href="http://angularjs.org"><span id="angular-circle" class="span3"></span></a>
-      <a href="/posts"><span id="blog-circle" class="span3"><p>Blog</p></span></a>
-      <a href="https://plus.google.com/113385596438431897721/posts"><span id="gplus-circle" class="span3"></span></a>
-      <a href="http://www.linkedin.com/in/alfrednutile"><span id="linkedin-circle" class="span3"></span></a>
-      <a href="https://kindle.amazon.com/profile/Alfred-E--Nutile/2827195"><span id="amazon-circle" class="span3"></span></a>
-      <a href="http://twitter.com/alnutile"><span id="twitter-circle" class="span3"></span></a>
-      <a href="http://drupal.org/user/114629"><span id="drupal-circle" class="span3"></span></a>
+<div id='page-title'>
+  <h2>Alfred Nutile</h2>
+</div>
+<div id="wrapper" class="full">
+  <div class="row-fluid">
+    <div class="span12">
+
+    <h3>Who?</h3>
+    <p>
+      <span class="dropcap">A</span>lfred Nutile, 15+ years of experience in different technologies. Linux, PHP, MySQL, Drupal, SysAdmin, LAMP, JS, jQuery, CSS, Consulting, Rails, Angular.js, JS, etc..
+    </p>
+    <div id="home-circles" class="container-fluid span11">
+      <div class="row-fluid">
+        <a href="/about"><span id="about-me-circle" class="span3"></span></a>
+        <a href="/portfolio"><span id="projects-circle" class="span3"><p>Portfolio</p></span></a>
+        <a href="http://hackforwesternmass.org/"><span id="hfc-circle" class="span3"></span></a>
+        <a href="http://alfrednutile.info/tags/rails"><span id="rails-circle" class="span3"></span></a>
+        <a href="http://angularjs.org"><span id="angular-circle" class="span3"></span></a>
+        <a href="/posts"><span id="blog-circle" class="span3"><p>Blog</p></span></a>
+        <a href="https://plus.google.com/113385596438431897721/posts"><span id="gplus-circle" class="span3"></span></a>
+        <a href="http://www.linkedin.com/in/alfrednutile"><span id="linkedin-circle" class="span3"></span></a>
+        <a href="https://kindle.amazon.com/profile/Alfred-E--Nutile/2827195"><span id="amazon-circle" class="span3"></span></a>
+        <a href="http://twitter.com/alnutile"><span id="twitter-circle" class="span3"></span></a>
+        <a href="http://drupal.org/user/114629"><span id="drupal-circle" class="span3"></span></a>
+      </div>
     </div>
-  </div>
+</div>
+</div>
 </div>
