--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,26 +13,65 @@
 </head>
 <body>
   <%= render 'shared/topnav' %>
-  <div  id="all-the-rest-container"  class="container-fluid">
-    
-    <div  id="all-the-rest"  class="row-fluid">
-      <div id="row-content">
+    <div  class="container">
         <% flash.each do |key, value| %>
           <div class="alert alert-<%= key %>"><%= value %></div>
         <% end %>
-        <div id="main-content">
-            <%= yield %>
-        </div>
-      </div><!--/row-fluid content-->
-    </div><!--/all-the-rest-->
+        <%= yield %>
+    </div>
   
-    <div class="row-fluid" id="row-footer">
-      <div id="misc-bar-bottom">
-         <%= render 'shared/footer' %>
-      </div><!--/misc-bar-->
-    </div><!--/row-fluid footer-->
+    <div id="footer">
+      <div class="container">
+        <div class="row-fluid">
+          <%= render 'shared/footer' %>
+        </div>
+      </div>
+    </div>
+    <div id="under-footer">
+        
+        <!-- start: Container -->
+        <div class="container">
+          
+          <!-- start: Row -->
+          <div class="row-fluid">
 
-  </div><!--/rest-container-->
+            <!-- start: Under Footer Logo -->
+            <div class="span2">
+              <div id="under-footer-logo">
+                <a class="brand" href="#">tabula</a>
+              </div>
+            </div>
+            <!-- end: Under Footer Logo -->
+
+            <!-- start: Under Footer Copyright -->
+            <div class="span9">
+              
+              <div id="under-footer-copyright">
+                © 2012, <a href="http://clabs.co">creativeLabs</a>. Designed by <a href="http://clabs.co">creativeLabs</a> in Poland 
+                <%= image_tag("poland.png", alt: "Poland") %>
+
+              </div>
+              
+            </div>
+            <!-- end: Under Footer Copyright -->
+
+            <!-- start: Under Footer Back To Top -->
+            <div class="span1">
+                
+              <div id="under-footer-back-to-top">
+                <a href="#"></a>
+              </div>
+            
+            </div>
+            <!-- end: Under Footer Back To Top -->
+          
+          </div>
+          <!-- end: Row -->
+          
+        </div>  
+        <!-- end: Container  -->
+        
+      </div>
 
   <%= javascript_include_tag "application" %>
    <script>
