--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,15 +1,22 @@
-<span id="address-block" class="span3 offset1">
+<span class="span3">
     <address>
-    <strong>Alfred Nutile</strong><br>
+    <h3>Alfred Nutile</h3>
       Leverett, MA<br>
       <abbr title="Phone">P:</abbr> (413) 345-5103
     </address>
-   
   <address>
     <a href="mailto:#">alfrednutile@gmail.com</a>
   </address>
 </span>
-<span id="social-block" class="pull-right span6 offset2">
+<span class="span3">
+      <h3>More info</h3>
+      <h4>Resume</h4>
+      <p>
+        <i class="halflings-icon white user"></i><a href="https://dl.dropboxusercontent.comu/54803135/Resume.pdf" target="_blank">PDF Here</a></br>
+        <i class="halflings-icon white user"></i><a href="https://dl.dropboxusercontent.com/u/54803135/Resume.doc" target="_blank">DOC Here</a>
+      </p>
+</span>
+<span id="social-block" class="pull-right span6">
   <ul class="inline">
    <li id='linked'class='span3'>
     <%= link_to image_tag("linkedin-4-xl.png", alt: "LinkedIn"), 'http://www.linkedin.com/in/alfrednutile/' %>
@@ -24,3 +31,4 @@
    </li>
   </ul>
 </span>
+
