--- a/app/views/shared/_topnav.html.erb
+++ b/app/views/shared/_topnav.html.erb
@@ -1,6 +1,7 @@
-<div id="info-bar" class="navbar navbar-inverse navbar-fixed-top">
+<header>
+  <div class="container">
+  <div id="info-bar" class="navbar navbar-inverse">
   <div class="navbar-inner">
-    <div class="container-fluid">
       <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -27,3 +28,4 @@
     </div>
   </div>
 </div>
+</header>
