--- a/app/views/shared/_topnav.html.erb
+++ b/app/views/shared/_topnav.html.erb
@@ -1,31 +1,30 @@
 <header>
   <div class="container">
-  <div id="info-bar" class="navbar navbar-inverse">
-  <div class="navbar-inner">
-      <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <span id="brand-bar" class="brand">AlfredNutile.info</span>
-      <div id="menu-top-items" class="nav-collapse collapse">
-        <ul id="main-menu" class="nav">
-            <li>
-              <a href='/'>Home</a>
-            </li>
-            <li>
-              <a href='/about'>About</a>
-            </li>
-            <li>
-              <a href="/portfolio">Portfolio</a>
-            </li>
-            <li>
-              <a href="/posts">Blog &amp; Things</a>
-            </li>
-        </ul>
-      </div> 
+    <div class="navbar navbar-inverse">
+      <div class="navbar-inner">
+        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+        </a>
+        <a class="brand" href="/">AlfredNutile.info</a>
+        <div class="nav-collapse collapse">
+          <ul class="nav">
+              <li>
+                <a href='/'>Home</a>
+              </li>
+              <li>
+                <a href='/about'>About</a>
+              </li>
+              <li>
+                <a href="/portfolio">Portfolio</a>
+              </li>
+              <li>
+                <a href="/posts">Blog &amp; Things</a>
+              </li>
+          </ul>
+        </div> 
+      </div>
     </div>
   </div>
-</div>
 </header>
