--- a/app/views/content/about.html.erb
+++ b/app/views/content/about.html.erb
@@ -108,11 +108,12 @@
 					<div><i class="halflings-icon refresh"></i>No Longer Active</div>
 				</div>
 
-			<h2>More info</h2>
-			<p>Or the infamous resume 
-			  <a href="https://dl.dropboxusercontent.comu/54803135/Resume.pdf" target="_blank">PDF Here</a>
-			  <a href="https://dl.dropboxusercontent.com/u/54803135/Resume.doc" target="_blank">DOC Here</a>
-			</p>
+      <h3>More info</h3>
+      <h4>Resume</h4>
+      <p>
+        <i class="halflings-icon  user"></i><a href="https://dl.dropboxusercontent.comu/54803135/Resume.pdf" target="_blank">PDF Here</a></br>
+        <i class="halflings-icon  user"></i><a href="https://dl.dropboxusercontent.com/u/54803135/Resume.doc" target="_blank">DOC Here</a>
+      </p>
 		</div>
 	</div>
 </div>
