--- a/app/views/posts/_bloglist.html.erb
+++ b/app/views/posts/_bloglist.html.erb
@@ -1,7 +1,7 @@
 <% @posts.each do |post| %>
 	<div class="post">
 		<div class="post-content">
-			<div class="post-title"><%= link_to post.title, post_path(post.id) %></div>
+			<div class="post-title"><h2><%= link_to post.title, post_path(post.id) %></h2></div>
 			<div class="post-description">
 				<p>
 					<%= simple_format strip_tags(truncate(post.body, :length => 200, :omission => "... (more)")) %>
