--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -12,14 +12,14 @@
 
 /* Import Section
 =================================================================== */
-@import url("social-icons.css");			/* Social Icons */
-@import url("fancybox.css");				/* Fancybox */
-@import url("font-awesome.css");			/* Font Awesome*/
-@import url("font-awesome-ie7.css");		/* Font Awesome*/
-@import url("glyphicons.css");				/* Glyphicons SVG & Font */
-@import url("halflings.css");				/* Glyphicons Halflings SVG & Font */
-@import url("bootstrap.css");
-@import url("bootstrap-responsive.css");
+@import "social-icons.css";			/* Social Icons */
+@import "fancybox.css";				/* Fancybox */
+@import "font-awesome.css";			/* Font Awesome*/
+@import "font-awesome-ie7.css";		/* Font Awesome*/
+@import "glyphicons.css";				/* Glyphicons SVG & Font */
+@import "halflings.css";				/* Glyphicons Halflings SVG & Font */
+@import "bootstrap.css";
+@import "bootstrap-responsive.css";
 
 html { -webkit-font-smoothing: antialiased; }
 
